Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Ryan Clark by iamryo</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Ryan Clark</h1>
+        <p>Mah Blarg - Moving here from static site hosting elsewhere</p>
+
+
+        <p class="view"><a href="https://github.com/iamryo">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <p>This is to be my new home. Moving from ryanpclark.com (that'll be where this will live once I've moved that over as well). Nothing to see yet. </p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
