Clean up my page

--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
     <div class="wrapper">
       <header>
         <h1>Ryan Clark</h1>
-        <p>Mah Blarg - Moving here from static site hosting elsewhere</p>
+        <p>I am a software developer and director of engineering</p>
 
 
         <p class="view"><a href="https://github.com/iamryo">View My GitHub Profile</a></p>
 
       </header>
       <section>
-        <p>This is to be my new home. Moving from ryanpclark.com (that'll be where this will live once I've moved that over as well). Nothing to see yet. </p>
+        <p>Welcome, please find me elsewhere on the web:</p>
+        <ul>
+          <li><p>Twitter: <a href="https://www.twitter.com/rypacl">@rypacl</a></p></li>
+          <li><p>LinkedIn: <a href="https://www.linkedin.com/in/ryanpatrickclark">Here</a></p></li>
+        </ul>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
